[project]
name = "pgtoy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coloredlogs>=15.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.9",
]

[tool.mypy]
files = "."
explicit_package_bases = true
strict = true

[[tool.mypy.overrides]]
module = ["coloredlogs"]
ignore_missing_imports = true

# https://www.postgresql.eu/events/pgconfeu2024/sessions/session/5897/slides/589/Postgres%20protocol.pdf
